fixed issues with comments paginator on mobile devices

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,3 +32,8 @@
     width: 40px;
   }
 }
+
+.paginator {
+  background: #fdfdfd;
+  border-radius: 5px;
+}
